@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillDetailController {
    - _billDetailRepository: IBillDetailRepositories 
    + DeleteBillDetail(Guid id): Task<IActionResult>
}

interface IBillDetailRepositories<<interface>>  {
    +DeleteBillDetail(Guid id): Task<DeleteBillDetailResponseDTO>
}

class BillDetailRepositories {
    - _billDetailDAO : BillDetailDAO
    +DeleteBillDetail(Guid id): Task<DeleteBillDetailResponseDTO>
}

class BillDetailDAO {
    - _client: Client
    +DeleteBillDetail(Guid id): Task<DeleteBillDetailResponseDTO>
}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

APIGateway -- BillDetailController
BillDetailController -- IBillDetailRepositories
IBillDetailRepositories <|.. BillDetailRepositories
BillDetailRepositories "1" -- "1..*" BillDetailDAO
BillDetailDAO "1" -- "0..*" BillDetail

@enduml